--- a/pages/marques.html
+++ b/pages/marques.html
@@ -185,6 +185,7 @@
                 <div class="  col-md-12 col-xl-4 mb-3 text-center ">
                     <h4>ABOUT IT</h4>
                     <h6><a href="./contactus.html" target="_parent">CONTACT US</a></h6>
+                    <p style="font-family:Courier, monospace; padding-top: 20px; color: gray;">Created By Saad Elafrhani | © 2023: All Rights Reserved</p>
                 </div>
 
             </div>
