--- a/pages/usedsneakers.html
+++ b/pages/usedsneakers.html
@@ -92,7 +92,7 @@
                 <div class="row pt-3 ">
                     <div class="col-12 col-sm-6 col-xl-4 mb-2  ">
                         <img width="400"    height="400"
-                            src="https://i.ebayimg.com/thumbs/images/g/90kAAOSwmbtlYRB4/s-l300.webp" alt="nikejordan">
+                            src="https://www.flatspot.com/cdn/shop/files/nike-sb-pogo-plus-shoes-midnight-navy-malachite-obsidian--1.jpg?crop=center&format=pjpg&height=1050&v=1720191319&width=900" alt="nikejordan">
                         <div class="meta pt-5">
                             <a href="./jordan.html" class="category">SNEAKERS NIKE</a>
                             <a class="btn btn-outline-warning px-" data-bs-toggle="modal"
@@ -423,8 +423,8 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6  col-xl-4 mb-2 ">
-                        <img width="400"
-                            src="https://i.ebayimg.com/thumbs/images/g/86sAAOSwJkJje6HB/s-l300.webp"
+                        <img width="400" height="450"
+                            src="https://i.ebayimg.com/images/g/kdcAAOSwSSdlTnf~/s-l1600.webp"
                             alt="vans">
                         <div class="meta pt-5">
                             <a href="./vans.html" class="category">SNEAKERS VANS</a>
@@ -528,6 +528,7 @@
                 <div class="  col-md-12 col-xl-4 mb-3 text-center ">
                     <h4>ABOUT IT</h4>
                     <h6><a href="./contactus.html" target="_parent">CONTACT US</a></h6>
+                    <p style="font-family:Courier, monospace; padding-top: 20px; color: gray;">Created By Saad Elafrhani | © 2023: All Rights Reserved</p>
                 </div>
 
             </div>
