--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <title>Document</title>
+    <title>Freshkicks</title>
+    <link rel="icon" type="image/png" href="images/logocop.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
@@ -621,8 +622,9 @@
                 <div class="  col-md-12 col-xl-4 mb-3 text-center ">
                     <h4>ABOUT IT</h4>
                     <h5><a href="./pages/contactus.html" target="_parent">CONTACT US</a></h5>
-                    <p style="font-family:Courier, monospace; padding-top: 20px; color: gray;">Created By Saad Elafrhani | © 2023: All Rights Reserved</p>
-                    
+                    <p style="font-family:Courier, monospace; padding-top: 20px; color: gray;">Created By Saad Elafrhani
+                        | © 2023: All Rights Reserved</p>
+
                 </div>
 
             </div>
