--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Freshkicks-Contact/page</title>
+    <link rel="icon" type="image/png" href="../images/logocop.png">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         <header class="sticky-top ">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <div class="navh container-fluid">
-                    <a class="navbar-brand w-50 " href="#">
+                    <a class="navbar-brand w-50 " href="../index.html">
                         <img class="logo" src="../images/logo.png" alt="logo">
                     </a>
                     <div class="">
